--- a/client/app/styles/styls/main.styl
+++ b/client/app/styles/styls/main.styl
@@ -291,7 +291,7 @@ md-icon.s32 span
 	letter-spacing inherit
 
 @media screen
-	#printSec
+	#printSection
 		display none
 
 @media print
@@ -319,7 +319,19 @@ md-icon.s32 span
 		*
 			visibility visible
 
+	.infoFicha.info
+		width 50%
+		p span
+			display inline-block
+			width 210px
 
+	.data-alumno
+		td
+			border 1px solid black
+		.td-alu
+			width 165px
+		.td-lit
+			width 80px
 
 .side-menu
 	menu-toggle
