hacer màs grande la tabla de cursos

--- a/client/app/views/matricula/inscripcion-form.html
+++ b/client/app/views/matricula/inscripcion-form.html
@@ -26,7 +26,7 @@
                 </tr>
                 <tr ng-hide="cursos.$hideRows" ng-repeat="curso in cursos">
                   <td ng-repeat="curso in cursos">
-                    <table style="width:100%">
+                    <table class="incripcion-horarios">
                       <thead>
                         <tr>
                           <th>Curso</th>
