agregar validacion para ocultar boton de finalizar matricula

--- a/client/app/styles/styls/main.styl
+++ b/client/app/styles/styls/main.styl
@@ -351,5 +351,5 @@ md-datepicker
 		padding-top 10px
 
 .inscripcion-horarios
-	@media (max-width: 900px)
+	@media (min-width: 900px)
 		width: 850px
