--- a/client/app/views/matricula/inscripcion.html
+++ b/client/app/views/matricula/inscripcion.html
@@ -51,7 +51,7 @@
               </tbody>
               <tbody>
             </table>
-            <div class="text-center">
+            <div class="text-center" ng-if="creditosactuales > 12">
               <button class="btn btn-success" ng-click="FinalizarMatricula()">FINALIZAR MATRICULA</button>
             </div>
           </div>
