Impresion de ficha matricula y validacíon de modalidad de ingreso

--- a/client/app/views/home/home_alumno.html
+++ b/client/app/views/home/home_alumno.html
@@ -1,7 +1,7 @@
 <md-content class="page-content" layout-align="center start" style="background-color:#f2f2f2;">
   <md-subheader class="md-primary " style="margin-right: 0">
     <h3><span class="fa fa-home"></span> Bienvenido al Sistema de Matrícula <small ng-if="!aproved" class="tc-{{$root.color.accent}}-500"><span class="fa fa-exclamation-circle"></span> Es necesario que actualice sus datos personales antes de continuar con el proceso de matrícula</small>
-   <small ng-if="!modeIngreso" class="tc-{{$root.color.accent}}-500"><span class="fa fa-exclamation-circle"></span> No se puede utilizar el servicio web para inscribirse por su modalidad de ingreso: {{nombreIngreso}} </small></h3>
+   <small ng-if="!modeIngreso" class="tc-{{$root.color.accent}}-500"><span class="fa fa-exclamation-circle"></span> No se puede utilizar el servicio web para inscribirse por su modalidad de ingreso no es la correcta o no tiene una modalidad de ingreso registrada </small></h3>
   </md-subheader>
   <md-content flex style="max-width:1020px;margin:auto;">
     <div layout="row" layout-sm="column">
