agregar fucnionalidad de finalizar matricula

--- a/client/app/styles/styls/main.styl
+++ b/client/app/styles/styls/main.styl
@@ -353,3 +353,6 @@ md-datepicker
 .inscripcion-horarios
 	@media (min-width: 900px)
 		width: 850px
+.table-matricula-inscripcion
+	.ng-table-group
+		background-color: #f9f9f9
