--- a/client/app/views/matricula/inscripcion-form.html
+++ b/client/app/views/matricula/inscripcion-form.html
@@ -85,7 +85,8 @@
         </md-content>
       </div>
     </md-dialog-content>
-    <button ng-if="addMode" class="btn btn-success btn-block btn-inscription" ng-click="addCursos()">Actualizar Matrícula</button>
-    <button ng-if="updateMode" class="btn btn-success btn-block col-md-3 btn-inscription" ng-click="addCursos()">Actualizar Matrícula</button>
+    <md-dialog-actions layout="row">
+    <md-button class="tc-white bgc-{{$root.color.primary}}-500" ng-if="addMode||updateMode"  ng-click="addCursos()">Actualizar Matrícula</md-button>
+  </md-dialog-actions>
   </form>
 </md-dialog>
