--- a/client/app/views/matricula/revision-last.html
+++ b/client/app/views/matricula/revision-last.html
@@ -1,4 +1,4 @@
-<div id="printSection" style="width:100%;">
+<div id="printSection" style="width:100%;" >
   <div id="showprint">
     <div id="headerPre" layout="row" layout-margin layout-fill style="border-bottom: 2px solid black; padding-bottom: 5px;">
       <div id="righthead" style="width:85%;">
@@ -170,12 +170,9 @@
   </md-subheader>
 
 
-  <div layout="row" layout-margin layout-fill>
+  <div layout="row" layout-align="center start" layout-margin layout-fill>
     <md-content flex class="md-padding page-content md-whiteframe-4dp" style="max-width:1020px;">
       <section>
-        <md-subheader>
-          <strong>Matrícula {{periodoNombre }}</strong>
-        </md-subheader>
         <div class="md-primary md-12-line">
           <md-list layout="column" layout-padding>
             <md-list-item>
@@ -187,47 +184,97 @@
             </md-list-item>
           </md-list>
         </div>
+        <md-subheader>
+          <h2 class=" tc-{{$root.color.primary}}-500" ng-if="!print">Proceso de Pre-Matrícula finalizado satisfactoriamente!</h2>
+          <h2 class=" tc-{{$root.color.primary}}-500" ng-if="print">Proceso de Matrícula finalizado satisfactoriamente!</h2>
+          <br>
+          <strong class=" tc-{{$root.color.primary}}-400">Matrícula {{periodoNombre }}</strong>
+        </md-subheader>
+
       </section>
 
       <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh" class="md-accent"></md-progress-linear>
       <!-- Imagen del usuario -->
-      <div flex layout="row" layout-fill>
-        <strong>Compromiso de pago</strong>
-        <md-button class="btn btn-primary" ng-print onclick="window.print()" style="top: 20px;right: 20px;bottom: auto;left: auto;
-    position: absolute;" ng-if="print"><i class="fa fa-print"></i> Imprimir</md-button>
-      </div>
 
-      <div layout="row" layout-fill>
-        <p>
-          El proceso de prematricula ha finalizado satisfactoriamente.</br>
-          Para que su proceso de matricula se haga efectiva debe acercarse a abonar a las oficinas del banco Continental como se indica en la ficha de pago.
-        </p>
-      </div>
       <!-- <div print-element-id="printSection" layout="row" layout-fill> -->
-      <md-content flex class="md-padding page-content" style="max-width:600px">
-        <!-- <div id="printSec"> -->
+      <md-content flex class="md-padding page-content" >
+        <div>
+          <h3><strong>Estimado alumno,</strong></h3>
 
-        <table ng-table="tableParamsDeudas" show-filter="true" class="table table-hover table-condensed table-striped table-bordered">
+        </div>
+
+        <div layout="row" layout-fill>
+          <p ng-if="!print">
+            Ud ha finalizado su proceso de prematricula satisfactoriamente, a traves del cual hemos generado una reserva de sus cursos seleccionados para el periodo {{periodoNombre}}:</br><br>
+          </p>
+          <p ng-if="print">
+            Ud ha finalizado su proceso de matricula satisfactoriamente, a traves del cual hemos generado una reserva de sus cursos seleccionados para el periodo {{periodoNombre}}:</br><br>
+          </p>
+        </div>
+        <table show-filter="true" class="table table-hover table-condensed table-striped table-bordered">
           <tbody>
-            <tr ng-repeat="item in $data" ng-class="{'table-selected-row bgc-teal-50':item.active}" ng-if="UI.deudasValue">
-              <td class="text-left" data-title="'Código'">{{}}</td>
-              <td class="text-left" data-title="'Descripción'">{{item._tasa.nombre}}</td>
-              <td class="text-left" data-title="'Monto'">S/.{{item.saldo}}</td>
-            </tr>
+            <tr class="bg-table-group">
+              <td></td>
+              <td><strong>CÓDIGO</strong></td>
+              <td><strong>NOMBRE CURSO</strong></td>
+              <td><strong>CICLO</strong></td>
+              <td><strong>CR.</strong></td>
+              <td><strong>TIPO CURSO</strong></td>
 
-            <tr ng-if="!UI.deudasValue">
-              <td class="text-center" colspan="3"> {{UI.messageDeudas}}</td>
+            </tr>
+            <tr ng-repeat="item in cursosselected" ng-class="{'table-selected-row bgc-teal-50':item.active}">
+              <td class="text-left" data-title="''">{{index}}</td>
+              <td class="text-left" data-title="'CODIGO'">{{item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle._curso.codigo }}</td>
+              <td class="text-left" data-title="'NOMBRE CURSO'">{{ item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle._curso.nombre }}</td>
+              <td class="text-left" data-title="'CICLO'">{{item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle.ciclo}}</td>
+              <td class="text-left" data-title="'CR.'">{{item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle.creditos}}</td>
+              <td class="text-left" data-title="'TIPO CURSO'"></td>
+
             </tr>
 
           </tbody>
         </table>
+        <p  ng-if="!print">
+          La Ficha de Prematrícula no constituye la obtención definitiva de cupo en los cursos seleccionados.
+        </p>
+      <br>
+        <!-- <div id="printSec"> -->
+        <p  ng-if="!print">
+          <strong>A continuación se muestra la información del pago que deberá realizar:</strong>
+        </p>
+        <div   ng-if="!print">
+          <table ng-table="tableParamsDeudas" show-filter="false" class="table table-hover table-condensed table-striped table-bordered">
+            <tbody>
+              <tr ng-repeat="item in $data" ng-class="{'table-selected-row bgc-teal-50':item.active}" ng-if="UI.deudasValue">
+                <td class="text-left" data-title="'Código de Pago'" style="width:250px;">{{item.codigo}} - {{item._tasa.abreviatura}}</td>
+                <td class="text-left" data-title="'Descripción'">{{item._tasa.nombre}}</td>
+                <td class="text-left" data-title="'Monto'">S/.{{item.saldo}}</td>
+              </tr>
+
+              <tr ng-if="!UI.deudasValue">
+                <td class="text-center" colspan="3"> {{UI.messageDeudas}}</td>
+              </tr>
+
+            </tbody>
+          </table>
+        </div>
+
+        <p  ng-if="!print">
+          Para finalizar su matrícula deberá realizar el abono respectivo dentro de las siguientes <strong>48:00 horas</strong> a traves de cualquier canal de atención del BBVA Banco Continental al siguiente numero de cuenta <strong>458-789845-0-53</strong> a nombre de <strong>Universidad Nacional de Ucayali</strong> por importe/concepto de:
+        </p>
+
+          <p ng-if="!print">
+            Pasadas las HH horas y no habiéndose realizado el pago indicado, su Matrícula quedará sin efecto perdiendo los cupos guardados en los cursos seleccionados.
+          </p>
       </md-content>
 
-      <div layout="row" layout-fill>
-        <div class="text-center" flex>
-          <a>
-            <button ui-sref="app" class="md-button" style="background-color: rgb(255,152,0);color:white;text-align:center;padding: 5px;">Volver</button>
-          </a>
-        </div>
+      <div layout-align="center start" layout="row" layout-fill>
+        <md-button class="btn btn-primary" ng-print onclick="window.print()" ng-if="print">
+          <i class="fa fa-print"></i> Imprimir Ficha de Matrícula
+        </md-button>
       </div>
     </md-content>
+    <md-button ui-sref="app"  class="md-fab md-fab-bottom-right" aria-label="Regresar al menu principal" >
+      <md-tooltip md-direction="left">Regresar al menu principal</md-tooltip>
+      <md-icon md-font-icon="fa fa-reply fa-lg tc-white"></md-icon>
+    </md-button>
