--- a/client/app/views/escuelas/escuelaparametros-form.html
+++ b/client/app/views/escuelas/escuelaparametros-form.html
@@ -60,21 +60,14 @@
       </div>
 
 
-
-      <div flex layout="row" layout-sm="column">
-        <div flex="30" layout-align="start start" flex-sm="100" class="text-left">
-          <md-checkbox ng-model="model.activo">
-            Activo
-          </md-checkbox>
-        </div>
-        <div flex="70" layout="row" layout-align="end center" flex-sm="100">
-          <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
-          <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
-        </div>
-      </div>
     </md-dialog-content>
     <md-dialog-actions layout="row">
-
+      <md-checkbox ng-model="model.activo">
+        Activo
+      </md-checkbox>
+      <span flex></span>
+      <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
+      <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
     </md-dialog-actions>
   </form>
 </md-dialog>
