--- a/client/app/views/facultades/procesos.html
+++ b/client/app/views/facultades/procesos.html
@@ -6,122 +6,53 @@
   <div layout="row" layout-align="center start" layout-margin layout-fill>
     <md-content flex class="md-padding page-content md-whiteframe-4dp" style="max-width:1020px;">
       <!--tabla: contiene el listado de elementos-->
-      <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh"></md-progress-linear>
-
-      <md-tabs md-dynamic-height md-border-bottom md-selected="selectedTab">
-            <md-tab label="Parametros por Escuela">
-              <md-content flex class="md-padding page-content md-whiteframe-4dp" style="max-width:1020px;">
-                <div  flex-container="row" flex-gutter="24">
-                  <div flex-item>
-                    <md-input-container class="md-block">
-                      <label>Facultad</label>
-                      <md-select ng-model="filter._facultad" ng-model-options="{trackBy: '$value._id'}" ng-change="LoadEcuelas()">
-                        <md-option ng-repeat="fac in facultades" ng-value="fac">
-                          {{fac.nombre}}
-                        </md-option>
-                      </md-select>
-                    </md-input-container>
-                  </div>
-                  <div flex-item>
-                    <md-input-container class="md-block">
-                      <label>Escuela</label>
-                      <md-select ng-model="filter._escuela" ng-model-options="{trackBy: '$value._id'}" >
-                        <md-option ng-repeat="escuela in escuelas" ng-value="escuela">
-                          {{escuela.nombre}}
-                        </md-option>
-                      </md-select>
-                    </md-input-container>
-                  </div>
-                  <div flex-item>
-                    <md-input-container class="md-block">
-                      <label>Periodos</label>
-                      <md-select ng-model="filter._periodo" ng-model-options="{trackBy: '$value._id'}" ng-change="List()">
-                        <md-option ng-repeat="periodo in periodos" ng-value="periodo">
-                          {{periodo.nombre}}
-                        </md-option>
-                      </md-select>
-                    </md-input-container>
-                  </div>
-                </div>
-
-                <!--tabla: contiene el listado de elementos-->
-                <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh"  class="md-accent"></md-progress-linear>
-                <div class="table-responsive">
-                  <table ng-table="tableParamsParametros" show-filter="false" class="table table-hover table-condensed table-striped table-bordered ">
-                    <tbody>
-                      <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
-                      <tr ng-repeat="item in $data" ng-click="item.active=!item.active;EnabledEdit(item)" ng-class="{'table-selected-row bgc-teal-50':item.active}">
-                        <td style="width:30px;">
-                          <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
-                        </td>
-
-                        <td class="text-left" data-title="'Nombre de Parámetro'" sortable="">{{item._parametro.nombre}}</td>
-                        <td class="text-left" data-title="'Valor de Parámetro'" sortable="">{{item.valor}}</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </md-content>
-            </md-tab>
-            <md-tab label="Procesos por Escuela">
-                <md-content flex class="md-padding page-content md-whiteframe-4dp" style="max-width:1020px;">
-                  <div  flex-container="row" flex-gutter="24">
-                    <div flex-item>
-                      <md-input-container class="md-block">
-                        <label>Facultad</label>
-                        <md-select ng-model="filter._facultad" ng-model-options="{trackBy: '$value._id'}" ng-change="LoadEcuelas()">
-                          <md-option ng-repeat="fac in facultades" ng-value="fac">
-                            {{fac.nombre}}
-                          </md-option>
-                        </md-select>
-                      </md-input-container>
-                    </div>
-                    <div flex-item>
-                      <md-input-container class="md-block">
-                        <label>Escuela</label>
-                        <md-select ng-model="filter._escuela" ng-model-options="{trackBy: '$value._id'}" >
-                          <md-option ng-repeat="escuela in escuelas" ng-value="escuela">
-                            {{escuela.nombre}}
-                          </md-option>
-                        </md-select>
-                      </md-input-container>
-                    </div>
-
-                    <div flex-item>
-                      <md-input-container class="md-block">
-                        <label>Periodos</label>
-                        <md-select ng-model="filter._periodo" ng-model-options="{trackBy: '$value._id'}" ng-change="ListProcesos()">
-                          <md-option ng-repeat="periodo in periodos" ng-value="periodo">
-                            {{periodo.nombre}}
-                          </md-option>
-                        </md-select>
-                      </md-input-container>
-                    </div>
-                  </div>
-
-                  <!--tabla: contiene el listado de elementos-->
-                  <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh"  class="md-accent"></md-progress-linear>
-                  <div class="table-responsive">
-                    <table ng-table="tableParamsProcesos" show-filter="false" class="table table-hover table-condensed table-striped table-bordered ">
-                      <tbody>
-                        <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
-                        <tr ng-repeat="item in $data" ng-click="item.active=!item.active;EnabledEdit(item)" ng-class="{'table-selected-row bgc-teal-50':item.active}">
-                          <td style="width:30px;">
-                            <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
-                          </td>
-
-                          <td class="text-left" data-title="'Nombre de Proceso'" sortable="">{{item._proceso.nombre}}</td>
-                          <td class="text-left" data-title="'Fecha Inicio'" sortable="">{{item.inicio | date:'dd/MM/yyyy'}}</td>
-                          <td class="text-left" data-title="'Fecha Fin'" sortable="">{{item.fin | date:'dd/MM/yyyy'}}</td>
-                          <td class="text-left" data-title="'Estado'" sortable="">{{item.estado}}</td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                </md-content>
-            </md-tab>
-
-          </md-tabs>
+      <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh" class="md-accent"></md-progress-linear>
+      <div  flex-container="row" flex-gutter="24">
+        <div flex-item>
+          <md-input-container class="md-block">
+            <label>Facultad</label>
+            <md-select ng-model="filter._facultad" ng-model-options="{trackBy: '$value._id'}" ng-change="LoadProcesosFacultad()">
+              <md-option ng-repeat="fac in facultades" ng-value="fac">
+                {{fac.nombre}}
+              </md-option>
+            </md-select>
+          </md-input-container>
+        </div>
+        <div flex-item>
+          <md-input-container class="md-block">
+            <label>Periodos</label>
+            <md-select ng-model="filter._periodo" ng-model-options="{trackBy: '$value._id'}" ng-change="LoadProcesosFacultad()">
+              <md-option ng-repeat="per in periodos" ng-value="per">
+                {{per.nombre}}
+              </md-option>
+            </md-select>
+          </md-input-container>
+        </div>
+      </div>
+        <!--tabla: contiene el listado de elementos-->
+        <div class="table-responsive">
+          <table  class="table table-hover table-condensed table-striped table-bordered ">
+            <tr>
+              <th></th>
+              <th>Nombre</th>
+              <th>Fecha Inicio</th>
+              <th>Fecha Fin</th>
+              <th>Estado</th>
+            </tr>
+            <tbody>
+              <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
+              <tr ng-repeat="item in procesosFacultad" ng-click="item.active=!item.active;EnabledEdit(item)" ng-class="{'table-selected-row bgc-teal-50':item.active}">
+                <td style="width:30px;">
+                  <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
+                </td>
+                <td class="text-left" data-title="'Nombre'" sortable="">{{item._proceso.nombre}}</td>
+                <td class="text-left" data-title="'Fecha Inicio'" sortable="">{{item.fechaInicio | date:'dd/MM/yyyy'}}</td>
+                <td class="text-left" data-title="'Fecha Fin'" sortable="">{{item.fechaFin | date:'dd/MM/yyyy'}}</td>
+                <td class="text-left" data-title="'Nombre'" sortable="">{{item.estado}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
 
     </md-content>
   </div>
