--- a/client/app/views/matricula/inscripcion.html
+++ b/client/app/views/matricula/inscripcion.html
@@ -26,36 +26,64 @@
         </md-subheader>
       </section>
 
+
+
       <!--tabla: contiene el listado de elementos-->
       <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh" class="md-accent"></md-progress-linear>
       <div ng-cloak>
-        <md-content class="col-md-10 col-md-offset-1 cursos-inscritos">
-          <p class="cursos-inscritos-p">Bienvenido al proceso de matricula. Por favor, seleccione uno o más cursos a los cuales desea matricularse</p>
+        <md-content class="md-padding">
+          <div flex layout="row">
+            <div flex>
+              <md-input-container class="md-block">
+                <label>Facultad</label>
+                <input required name="codigo" ng-model="ALUMNO._escuela._facultad.nombre">
+              </md-input-container>
+            </div>
+            <div flex>
+              <md-input-container class="md-block">
+                <label>Escuela</label>
+                <input required name="codigo" ng-model="ALUMNO._escuela.nombre">
+              </md-input-container>
+            </div>
+          </div>
+          <div>Bienvenido al proceso de matricula. Por favor, seleccione uno o más cursos a los cuales desea matricularse</div>
           <div class="table-responsive" ng-if="cursosselected.length>0">
             <table show-filter="false" class="table table-hover table-condensed table-striped table-bordered ">
               <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
-              <tbody>
+              <thead>
                 <tr class="ng-table-group">
-                  <td><strong>Código</strong></td>
-                  <td><strong>Nombre Curso</strong></td>
-                  <td><strong>Ciclo</strong></td>
-                  <td><strong>Nro Créditos</strong></td>
-                  <td><strong>Tipo</strong></td>
-                  <td><strong>Grupo</strong></td>
+                  <th class="text-center"><strong>Código</strong></th>
+                  <th class="text-center"><strong>Nombre Curso</strong></th>
+                  <th class="text-center"><strong>Ciclo</strong></th>
+
+                  <th class="text-center"><strong>Grupo</strong></th>
+                  <th class="text-center"><strong>Nro Créditos</strong></th>
                 </tr>
+              </thead>
+              <tbody>
+
                 <tr ng-repeat="item in cursosselected" ng-click="item.active=!item.active;EnabledAdd(item)">
                   <td>{{ item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle._curso.codigo }}</td>
                   <td class="text-left">{{ item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle._curso.nombre }}</td>
                   <td class="text-left">{{ item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle.ciclo }}</td>
-                  <td class="text-left">{{ item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle.creditos }}</td>
-                  <td class="text-left"></td>
+
                   <td class="text-left">{{ item._grupoCurso._seccion.nombre }}</td>
+                  <td class="text-center">{{ item._grupoCurso._cursoAperturadoPeriodo._planestudiodetalle.creditos }}</td>
+                </tr>
+                <tr>
+
+                  <td></td>
+                  <td></td>
+
+                  <td></td>
+                  <td><strong>Totales:</strong></td>
+                  <td class="text-center"><strong>{{ TotalCreditos();}}</strong></td>
                 </tr>
               </tbody>
               <tbody>
             </table>
-            <div class="text-center" ng-if="creditosactuales > 10">
-              <button class="btn btn-success" ng-click="FinalizarMatricula()">FINALIZAR MATRICULA</button>
+            <div class="text-center" ng-if="cursosselected.length > 0">
+              <md-button class="md-raised md-primary" ng-click="FinalizarMatricula()">FINALIZAR MATRICULA</md-button>
             </div>
           </div>
         </md-content>
